Change jupyter notebook to use fsolve to find steady state

--- a/state_space.ipynb
+++ b/state_space.ipynb
@@ -133,24 +133,13 @@
     "\n",
     "    return _C_S[0]\n",
     "\n",
-    "def solve_heat(_T):\n",
+    "def solve_heat(x):\n",
+    "    _T = x[0]\n",
     "    _C_A = solve_C_A(_T)\n",
     "    _C_S = solve_C_S(_T)\n",
     "    __f = f_T.subs({C_A: _C_A, C_S: _C_S, T_0: T_0s, U: U_s})\n",
     "    _f = lambdify(T, __f, 'numpy')\n",
-    "    return _f(_T)\n",
-    "\n",
-    "def root_solve(f, x0):\n",
-    "    x_n = x0\n",
-    "    for _ in range(100):\n",
-    "        dx = 1e-12\n",
-    "        diff = (f(x_n + dx) - f(x_n)) / dx\n",
-    "        x_n = x_n - f(x_n) / diff\n",
-    "\n",
-    "        if np.abs(diff) < 1e-10:\n",
-    "            break\n",
-    "\n",
-    "    return x_n"
+    "    return [_f(_T)]"
    ]
   },
   {
@@ -161,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "460.3182315699554"
+       "460.31823156995324"
       ]
      },
      "execution_count": 5,
@@ -171,7 +160,7 @@
    ],
    "source": [
     "# T_s evaluation\n",
-    "T_s = root_solve(solve_heat, 460)\n",
+    "T_s = fsolve(solve_heat, [460])[0]\n",
     "\n",
     "T_s"
    ]
@@ -192,7 +181,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.2116701379629191, 2.9999920948240835)"
+       "(0.21167013796294581, 2.9999920948240835)"
       ]
      },
      "execution_count": 6,
@@ -223,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9507743865202514"
+       "0.9507743865202452"
       ]
      },
      "execution_count": 7,
@@ -391,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "[1701.43204992447*T_0 - 682931.140469038]"
+       "[1701.43204992452*T_0 - 682931.140469052]"
       ]
      },
      "execution_count": 13,
@@ -444,28 +433,6 @@
     "\n",
     "largest_T_0 = fsolve(lambda T: U_of_T_0(T) - 53e3, [430])[0]\n",
     "largest_T_0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-400000000000000.0*C_A*(C_A + 0.8)*exp(-15395.7180659129/T) - 0.0625*C_A + 0.26875,\n",
-       " -0.0625*C_S - 1.0e+84*C_S*exp(-96223.2379119557/T) + 0.1875,\n",
-       " 5.76581153162306e+15*C_A*(C_A + 0.8)*exp(-15395.7180659129/T) + 1.01600203200406e+86*C_S*exp(-96223.2379119557/T) - 0.0625*T + 0.0625*T_0 - 4.20688341376683e-7*U*(T - 373))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_C_A, f_C_S, f_T"
    ]
   }
  ],
